# Agente-Institucional-con-ADK

./: .gitignore  README.md  pyproject.toml
adk_file_search_agent/: README.md  agent.py  requirements.txt
deployment/: deploy.py  requirements.txt
my_agent_utem/: agent.py  prompts.py  requirements.txt
my_agent_utem/agents/: __init__.py  bq_agent.py  rag_agent.py  reportes_agent.py
my_agent_utem/reportes/: .gitignore  README.md
my_agent_utem/templates/: archivo_test.html
my_agent_utem/tools/: __init__.py  generate_chart.py  generate_pdf_report.py  google_search.py  index_documents.py  query_rag.py  read_rag.py  upload_to_storage.py
scripts/: index_all_documents.py
